--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 <!doctype html>
-Check out Euclid's algorithm and others. Clone git repository https://github.com/lukeclarksfo/c/
 
-<a href="https://github.com/lukeclarksfo/c/">GitHub</a>
+<style>
+body
+{
+    font-family: sans-serif;
+    margin: 100px 20%;
+}
+</style>
+
+<div>Check out Euclid's algorithm and others.</div>
+
+<div><a href="https://github.com/lukeclarksfo/c/">GitHub</a></div>
+
+<div>Clone git repository https://github.com/lukeclarksfo/c/</div>
