--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@ body
     font-family: sans-serif;
     margin: 100px 20%;
 }
+div
+{
+    padding: 10px;
+}
 </style>
+
+<h2>Algorithms and data structures in C</h2>
 
 <div>Check out Euclid's algorithm and others.</div>
 
