--- a/index.html
+++ b/index.html
@@ -1,67 +1,17 @@
 <!doctype html>
 <html>
 <head>
-<style>
-body
-{
-    margin: 0;
-    font-family:sans-serif;
-}
-header
-{
-    background: rgb(4 60 129);
-    color: white;
-    display: flex;
-}
-header div, header p
-{
-    padding: 20px;
-}
-header:nth-of-type(2)
-{
-    flex-flow: column;
-}
-header p, header h2
-{
-    padding: 10px 100px;
-}
-header h2
-{
-    font-weight: 550;
-}
-a 
-{
-    color: white;
-    font-weight: bold;
-    text-decoration: none;
-}
-a:hover
-{
-  text-decoration: underline;
-}
-</style>
-<style>
-body
-{
-    font-family: sans-serif;
-}
-main
-{
-    margin: 100px 20%;
-}
-div
-{
-    padding: 10px;
-}
-</style>
+
+    <link rel="stylesheet" href="https://lukeclarksfo.github.io/header.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
+<header id="cross-first-header">
     <div><a href="https://lukeclarksfo.github.io/">Luke Clark</a></div>
     <div><a href="https://github.com/lukeclarksfo">GitHub Profile</a></div>
     <div><a href="https://github.com/lukeclarksfo/c/">GitHub</a></div>
 </header>
-<header>
+<header id="cross-second-header"">
     <h2>Algorithms and Data Structures in C</h2>
     <p>This contains algorithms written in C. Check out the repository to download and compile the programs.</p>
 </header>
