--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div><a href="https://github.com/lukeclarksfo">GitHub Profile</a></div>
     <div><a href="https://github.com/lukeclarksfo/c/">GitHub</a></div>
 </header>
-<header id="cross-second-header"">
+<header id="cross-second-header">
     <h2>Algorithms and Data Structures in C</h2>
     <p>This contains algorithms written in C. Check out the repository to download and compile the programs.</p>
 </header>
