--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header id="cross-first-header">
+<div id="cross-first-header">
     <div><a href="https://lukeclarksfo.github.io/">Luke Clark</a></div>
     <div><a href="https://github.com/lukeclarksfo">GitHub Profile</a></div>
     <div><a href="https://github.com/lukeclarksfo/c/">GitHub</a></div>
-</header>
-<header id="cross-second-header">
+</div>
+<div id="cross-second-header">
     <h2>Algorithms and Data Structures in C</h2>
     <p>This contains algorithms written in C. Check out the repository to download and compile the programs.</p>
-</header>
+</div>
 
 <main>
 <h2>Algorithms and data structures in C</h2>
