--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div><a href="https://lukeclarksfo.github.io/">Luke Clark</a></div>
     <div><a href="https://github.com/lukeclarksfo/c/">GitHub</a></div>
 </div>
-<!--<div id="cross-second-header">
+<div id="cross-second-header">
     <h2>Algorithms and Data Structures in C</h2>
     <p>This contains algorithms written in C. Check out the repository to download and compile the programs.</p>
-</div>-->
+</div>
 
 <main>
 <h2>Algorithms and data structures in C</h2>
