--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </p>
 
 <pre>
-    selection(int a[], int N)
+    void selection(int a[], int N)
     {
         int i, j, min, t;
         for(i = 1; i < N; i++)
@@ -67,7 +67,7 @@
 </p>
 
 <pre>
-    insertion(int a[], int N)
+    void insertion(int a[], int N)
     {
         int i, j, v;
         for(i = 2; i <= N; i++)
